--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vertikální časová osa</title>
+    <title>Časová osa</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -23,28 +23,28 @@
         </div>
         <div class="content-section">
             <div class="content" id="content-0">
-                <div class="block animate">
+                <div class="block">
                     <h2>Rok 2020</h2>
                     <p>Události roku 2020...</p>
                     <img src="image1.jpg" alt="Obrázek 2020">
                 </div>
             </div>
             <div class="content" id="content-1" style="display:none;">
-                <div class="block animate">
+                <div class="block">
                     <h2>Rok 2021</h2>
                     <p>Události roku 2021...</p>
                     <img src="image2.jpg" alt="Obrázek 2021">
                 </div>
             </div>
             <div class="content" id="content-2" style="display:none;">
-                <div class="block animate">
+                <div class="block">
                     <h2>Rok 2022</h2>
                     <p>Události roku 2022...</p>
                     <img src="image3.jpg" alt="Obrázek 2022">
                 </div>
             </div>
             <div class="content" id="content-3" style="display:none;">
-                <div class="block animate">
+                <div class="block">
                     <h2>Rok 2023</h2>
                     <p>Události roku 2023...</p>
                     <img src="image4.jpg" alt="Obrázek 2023">
